--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 300px;
   height: 300px;
-  background-image: url('hobotnica.png');
+  background-image: url('hobotnica.jpg');
   background-size: cover;
   margin: auto;
 }
