--- a/style.css
+++ b/style.css
@@ -9,10 +9,7 @@
 
 .arm {
   position: absolute;
-  top: 50%;
-  left: 50%;
   transform-origin: center;
-  transform: translate(-50%, -50%) rotate(45deg);
   padding: 10px;
   border-radius: 8px;
   background-color: rgba(0, 123, 255, 0.8); /* Plavi efekt za početak */
@@ -30,6 +27,47 @@
   cursor: pointer;
 }
 
+/* Krakovi pozicionirani oko hobotnice */
+.arm.tentacle1 {
+  top: 10%;
+  left: 40%;
+}
+
+.arm.tentacle2 {
+  top: 20%;
+  right: 10%;
+}
+
+.arm.tentacle3 {
+  top: 50%;
+  right: 5%;
+}
+
+.arm.tentacle4 {
+  bottom: 10%;
+  right: 20%;
+}
+
+.arm.tentacle5 {
+  bottom: 20%;
+  left: 20%;
+}
+
+.arm.tentacle6 {
+  bottom: 10%;
+  left: 5%;
+}
+
+.arm.tentacle7 {
+  top: 50%;
+  left: 5%;
+}
+
+.arm.tentacle8 {
+  top: 10%;
+  left: 5%;
+}
+
 /* Dodavanje animacije tijekom ulaska na stranicu */
 .arm {
   opacity: 0;
@@ -39,10 +77,10 @@
 @keyframes fadeIn {
   from {
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0.8);
+    transform: scale(0.8);
   }
   to {
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
+    transform: scale(1);
   }
 }
