--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+/* Osnovni stilovi za veće zaslone */
 .octopus-container {
   position: relative;
-  width: 400px; /* Centrirana i uravnotežena hobotnica */
+  width: 400px;
   height: 400px;
   margin: auto;
   display: flex;
@@ -13,73 +14,77 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 1; /* Pozadina - hobotnica */
+  z-index: 1;
 }
 
-/* Kućice - stilovi */
 .arm {
   position: absolute;
-  width: 120px; /* Širina kućice za jednolinijske nazive */
-  height: 40px; /* Optimalna visina za tekst u jednom retku */
-  line-height: 40px; /* Vertikalno centriranje teksta */
-  background-color: rgba(0, 123, 255, 0.8); /* Plava boja */
+  width: 120px;
+  height: 40px;
+  line-height: 40px;
+  background-color: rgba(0, 123, 255, 0.8);
   color: white;
-  font-size: 14px; /* Optimalna veličina teksta */
+  font-size: 14px;
   font-weight: bold;
   text-align: center;
   border-radius: 8px;
-  z-index: 2; /* Kućice iznad hobotnice */
+  z-index: 2;
   transition: transform 0.3s, background-color 0.3s;
-  overflow: hidden; /* Izbjegavanje prelijevanja teksta */
-  white-space: nowrap; /* Sprječavanje prelaska u više redova */
-  text-overflow: ellipsis; /* Dodavanje "..." ako tekst bude predugačak */
 }
 
-.arm:hover {
-  transform: scale(1.1);
-  background-color: rgba(255, 193, 7, 0.9); /* Promjena boje na hover */
-  cursor: pointer;
-}
+/* Stilovi za manje zaslone */
+@media (max-width: 600px) {
+  .octopus-container {
+    width: 300px; /* Manja hobotnica za mobilne uređaje */
+    height: 300px;
+  }
 
-/* Pozicioniranje kućica izvan hobotnice i usklađivanje s krakovima */
-.arm.tentacle1 {
-  top: -15%; /* Iznad hobotnice */
-  left: 50%;
-  transform: translate(-50%, 0);
-}
+  .arm {
+    width: 90px; /* Manje kućice */
+    height: 30px;
+    font-size: 12px; /* Manji font za bolju preglednost */
+    line-height: 30px;
+  }
 
-.arm.tentacle2 {
-  top: 5%;
-  right: -20%; /* Desno od hobotnice */
-}
+  .arm.tentacle1 {
+    top: -20%; /* Prilagođeno pozicioniranje kućica */
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
 
-.arm.tentacle3 {
-  top: 50%;
-  right: -25%; /* Dolje desno */
-}
+  .arm.tentacle2 {
+    top: 5%;
+    right: -10%;
+  }
 
-.arm.tentacle4 {
-  bottom: 10%;
-  right: -20%;
-}
+  .arm.tentacle3 {
+    top: 50%;
+    right: -15%;
+  }
 
-.arm.tentacle5 {
-  bottom: -15%; /* Ispod hobotnice */
-  left: 50%;
-  transform: translate(-50%, 0);
-}
+  .arm.tentacle4 {
+    bottom: 5%;
+    right: -10%;
+  }
 
-.arm.tentacle6 {
-  bottom: 10%;
-  left: -20%; /* Dolje lijevo */
-}
+  .arm.tentacle5 {
+    bottom: -20%;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
 
-.arm.tentacle7 {
-  top: 50%;
-  left: -25%; /* Gore lijevo */
-}
+  .arm.tentacle6 {
+    bottom: 5%;
+    left: -10%;
+  }
 
-.arm.tentacle8 {
-  top: 5%;
-  left: -20%;
+  .arm.tentacle7 {
+    top: 50%;
+    left: -15%;
+  }
+
+  .arm.tentacle8 {
+    top: 5%;
+    left: -10%;
+  }
 }
